# zipper

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-apk.yml  modify.yml
app/: build.gradle.kts  obfuscation-dict.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/anim/: checkbox_check_in.xml  checkbox_check_out.xml  live_pulse_animation.xml  live_pulse_ring_1.xml  live_pulse_ring_2.xml  live_pulse_ring_3.xml  signal_bar1.xml  signal_bar2.xml  signal_bar3.xml  signal_bar4.xml  signal_bar5.xml
app/src/main/res/color/: bottom_nav_colors.xml  chip_background_color.xml  chip_stroke_color.xml  chip_text_color.xml  input_stroke_color.xml  link_chip_text_color.xml  tv_tab_text_color.xml
app/src/main/res/drawable/: bg_category_pill.xml  bg_favorite_button.xml  bg_message_banner.xml  bg_search_box.xml  bg_wrapper_badge.xml  bottom_nav_container_bg.xml  bottom_nav_glass_background.xml  bottom_nav_indicator_background.xml  bottom_nav_indicator_bg.xml  bottom_nav_text_colors.xml  button_hover_effect.xml  checkbox_checked.xml  checkbox_indeterminate.xml  checkbox_ripple.xml  checkbox_unchecked.xml  circle_bg.xml  circular_button_bg.xml  circular_logo_background.xml  circular_logo_stroke_overlay.xml  cursor_amber.xml  error_message_background.xml  gradient_top.xml  ic_arrow_back.xml  ic_aspect_fill.xml  ic_aspect_fit.xml  ic_aspect_ratio.xml  ic_aspect_zoom.xml  ic_brightness_high.xml  ic_broadcast_live.xml  ic_channel_placeholder.xml  (+56 more)
(+156 files in other folders)
